--- a/hr/templates/eve_oauth_prompt.html
+++ b/hr/templates/eve_oauth_prompt.html
@@ -2,7 +2,12 @@
 
 
 {% block content %}
-<h3>This website uses EVE's Single Sign-On feature, so that you don't have to remember another password. Use the button below to login.</h3>
+<h3>This website uses <strong>EVE's Single Sign-On</strong> feature,<br>
+so that you don't have to remember another password.<br>
+Use the button below to log in.</h3>
+
+<br>
+
 <div class="row">
     <div class="col l6 offset-l5">
         <a href="{{ url }}"><img src="https://i.imgur.com/qNdhCs4.png" alt="Click here to login"></a>
