--- a/hr/templates/index.html
+++ b/hr/templates/index.html
@@ -2,5 +2,18 @@
 
 
 {% block content %}
-<h1>Index page</h1>    
+<h1>Applications</h1>
+
+<div class="row">
+    <div class="col l12">
+        <div class="card-panel blue lighten-2">
+            <p>
+                {% for app in applications %}
+                    {{ app }}<br>
+                {% endfor %}
+            </p>
+        </div>
+    </div>
+</div>
+
 {% endblock content %}
