--- a/hr/templates/base.html
+++ b/hr/templates/base.html
@@ -3,9 +3,10 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>GETIN HR</title>
-    <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-beta1/jquery.min.js"></script>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/global.css') }}">
+    <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <style>
@@ -16,7 +17,7 @@
     <script>
         $(document).ready(function() {
             setTimeout(function() {
-                $('.flashed').fadeOut();
+                $('.flashed.disappear').fadeOut('slow');
             }, 10000);
         });
     </script>
@@ -27,11 +28,10 @@
 <nav>
     <div class="nav-wrapper blue lighten-2">
         <div class="container">
-            <a href="{{ url_for('index') }}" class="brand-logo">GETIN Auth</a>
+            <a href="{{ url_for('index') }}" class="brand-logo">GETIN HR</a>
             <ul id="nav-mobile" class="right hide-on-med-and-down">
             {% if not current_user.is_anonymous %}
-                <li><a href="{{ url_for('services') }}">Services</a></li>
-                <li><a href="{{ url_for('logout') }}">Logout {{ session['character_name'] }}</a></li>
+                <li><a href="{{ url_for('logout') }}">Logout {{ current_user.name }}</a></li>
             {% else %}
                 <li><a href="{{ url_for('eve_oauth_prompt') }}">Login</a></li>
             {% endif %}
@@ -45,7 +45,7 @@
         {% if messages %}
             {% for category, message in messages %}
                 {% if category == 'success' %}
-                    <div class="card-panel light-green flashed">
+                    <div class="card-panel light-green flashed disappear">
                 {% else %}
                     <div class="card-panel red flashed">
                 {% endif %}
