--- a/hr/static/css/global.css
+++ b/hr/static/css/global.css
@@ -20,3 +20,9 @@ h2 > small {
     font-size: 2rem;
     color: rgba(107, 107, 107, 0.8);
 }
+.no-pad-top {
+    margin-top: 0;
+}
+.no-pad-bottom {
+    margin-bottom: 0;
+}
