--- a/hr/templates/add_app.html
+++ b/hr/templates/add_app.html
@@ -53,7 +53,7 @@
             </div>
         </div>
         <div class="row">
-            <button class="btn waves-effect waves-light blue" type="submit" name="action">Submit
+            <button class="btn waves-effect waves-light orange" type="submit" name="action">Submit
                 <i class="material-icons right">send</i>
             </button>
         </div>
