--- a/hr/templates/admin.html
+++ b/hr/templates/admin.html
@@ -30,11 +30,11 @@
         <div class="row">
             <div class="input-field col s6">
                 <label for="name">Character (full) name</label>
-                <input type="text" name="name">
+                <input type="text" name="name" required>
             </div>
         </div>
         <div class="col s6">
-            <button class="btn waves-effect waves-light blue" type="submit" name="action">Add
+            <button class="btn waves-effect waves-light orange" type="submit" name="action">Add
                 <i class="material-icons right">send</i>
             </button>
         </div>
