--- a/hr/templates/base.html
+++ b/hr/templates/base.html
@@ -48,7 +48,7 @@
         {% if messages %}
             {% for category, message in messages %}
                 {% if category == 'success' %}
-                    <div class="card-panel light-orange flashed disappear">
+                    <div class="card-panel green flashed disappear">
                 {% else %}
                     <div class="card-panel red flashed">
                 {% endif %}
