--- a/hr/templates/base.html
+++ b/hr/templates/base.html
@@ -48,9 +48,9 @@
         {% if messages %}
             {% for category, message in messages %}
                 {% if category == 'success' %}
-                    <div class="card-panel green flashed disappear">
+                    <div class="card-panel green lighten-1 flashed disappear">
                 {% else %}
-                    <div class="card-panel red flashed">
+                    <div class="card-panel red lighten-1 flashed">
                 {% endif %}
                     <p>{{ message }}</p>
                 </div>
