--- a/hr/templates/base.html
+++ b/hr/templates/base.html
@@ -28,15 +28,20 @@
 <nav>
     <div class="nav-wrapper orange lighten-2">
         <div class="container">
-            <a href="{{ url_for('index') }}" class="brand-logo">GETIN HR</a>
+            <a class="brand-logo">GETIN
+                <span class="orange-text">in</span>Human<span class="orange-text">e</span> Resources
+            </a>
             <ul id="nav-mobile" class="right hide-on-med-and-down">
             {% if not current_user.is_anonymous %}
+                {% if current_user.is_authenticated %}
+                    <li><a href="{{ url_for('index') }}">Home</a></li>
+                {% endif %}
                 {% if current_user.admin %}
                     <li><a href="{{ url_for('admin') }}">Admin</a></li>
                 {% endif %}
                 <li><a href="{{ url_for('logout') }}">Logout {{ current_user.name }}</a></li>
-            {% else %}
-                <li><a href="{{ url_for('eve_oauth_prompt') }}">Login</a></li>
+            {% elif not request.endpoint == 'login' %}
+                <li><a href="{{ url_for('login') }}">Login</a></li>
             {% endif %}
             </ul>
         </div>
