--- a/hr/templates/base.html
+++ b/hr/templates/base.html
@@ -35,6 +35,7 @@
             {% if not current_user.is_anonymous %}
                 {% if current_user.is_authenticated %}
                     <li><a href="{{ url_for('index') }}">Home</a></li>
+                    <li><a href="{{ url_for('personal') }}">My info</a></li>
                 {% endif %}
                 {% if current_user.admin %}
                     <li><a href="{{ url_for('admin') }}">Admin</a></li>
