--- a/hr/templates/add_member.html
+++ b/hr/templates/add_member.html
@@ -19,31 +19,27 @@
                 <input type="text" name="name" required>
             </div>
             <div class="input-field col s4">
-                <label for="reddit">Reddit username</label>
-                <input type="text" name="reddit">
-            </div>
-            <div class="input-field col s4">
                 <select name="status">
-                    <option value="New"></option>
-                    <option value="Ready"></option>
-                    <option value="Accepted"></option>
-                    <option value="Denied"></option>
+                    <option value="New">New</option>
+                    <option value="Ready">Ready</option>
+                    <option value="Accepted">Accepted</option>
+                    <option value="Denied">Denied</option>
                 </select>
                 <label for="status">Status</label>
-            </div>
-        </div>
-        <div class="row">
-            <div class="input-field col s4">
-                <label for="apikey">API Key</label>
-                <input type="text" name="apikey" required>
-            </div>
-            <div class="input-field col s4">
-                <label for="apicode">API vCode</label>
-                <input type="text" name="apicode" required>
             </div>
             <div class="input-field col s4">
                 <label for="alts">Alts</label>
                 <input type="text" name="alts">
+            </div>
+        </div>
+        <div class="row">
+            <div class="input-field col s6">
+                <label for="apikey">API Key</label>
+                <input type="text" name="apikey" required>
+            </div>
+            <div class="input-field col s6">
+                <label for="apicode">API vCode</label>
+                <input type="text" name="apicode" required>
             </div>
         </div>
         <div class="row">
