--- a/hr/templates/admin.html
+++ b/hr/templates/admin.html
@@ -25,7 +25,7 @@
 </div>
 
 <div class="card-panel">
-    <h4>Add access</h4>
+    <h4>Add a recruiter</h4>
     <form action="{{ url_for('admin') }}" method="POST" class="col s12">
         <div class="row">
             <div class="input-field col s6">
