--- a/hr/templates/base.html
+++ b/hr/templates/base.html
@@ -58,13 +58,15 @@
         {% with messages = get_flashed_messages(with_categories=true) %}
             {% if messages %}
                 {% for category, message in messages %}
-                    {% if category == 'success' %}
-                        <div class="card-panel green lighten-1 flashed disappear">
-                    {% else %}
-                        <div class="card-panel red lighten-1 flashed">
+                    {% if message %}
+                        {% if category == 'success' %}
+                            <div class="card-panel green lighten-1 flashed disappear">
+                        {% else %}
+                            <div class="card-panel red lighten-1 flashed">
+                        {% endif %}
+                            <p>{{ message }}</p>
+                        </div>
                     {% endif %}
-                        <p>{{ message }}</p>
-                    </div>
                 {% endfor %}
             {% endif %}
         {% endwith %}
