--- a/hr/templates/details.html
+++ b/hr/templates/details.html
@@ -56,6 +56,23 @@
                 <a class="waves-effect waves-light btn modal-trigger orange" href="#modalAPI">Edit</a>
             </td>
         </tr>
+        <tr>
+            <td>Visibility</td>
+            <td>
+                {% if not member.hidden %}
+                    Visible (<a href="{{ url_for('visibility', id=member.id, action='hide') }}">hide</a>)
+                {% else %}
+                    <span class="red">Hidden</span> (<a href="{{ url_for('visibility', id=member.id, action='show') }}">show</a>)
+                {% endif%}
+            </td>
+        </tr>
+        {% if current_user.admin %}
+        <tr>
+            <td>Delete</td>
+            <td><a class="waves-effect waves-light btn modal-trigger red"
+                href="{{ url_for('delete', id=member.id) }}">Permanently delete user</a></td>
+        </tr>
+        {% endif %}
     </tbody>
 </table>
 
