Remove reddit account validation error

--- a/hr/templates/details.html
+++ b/hr/templates/details.html
@@ -34,7 +34,7 @@
                 {% if member.reddit %}
                     <a href="https://reddit.com/u/{{ member.reddit }}" target="_blank">{{ member.reddit }}</a>
                 {% else %}
-                    <span class="red">No linked account</span>
+                    No linked account
                 {% endif %}
             </td>
         </tr>
