--- a/hr/templates/join.html
+++ b/hr/templates/join.html
@@ -7,7 +7,8 @@
 <h5 class="pad-top-heavy">
 {% if current_user.member.status == 'Guest' %}
     If you want to join, create a new API key with the button,
-    set it to not expire, copy it in below, and hit the Apply button.
+    set it to not expire, copy it in below, and hit the Apply button.<br>
+    If you already have a character in the corp, put its name in the other box.
 </h5>
 
 <br>
@@ -32,13 +33,31 @@
                 <input type="text" name="code" required>
             </div>
         </div>
-            <button class="btn waves-effect waves-light orange">Apply
-                <i class="material-icons right">send</i>
-            </button>
+        <div class="row">
+            <div class="col s6 input-field">
+                <label for="main">Main</label>
+                <input type="text" name="main">
+            </div>
+            <div class="col s6">
+                <button class="btn waves-effect waves-light orange" style="top: 24px;">Apply
+                    <i class="material-icons right">send</i>
+                </button>
+            </div>
+        </div>
     </form>
 </div>
 {% else %}
 You've put in an application, and it's status is <strong>{{ current_user.member.status }}</strong>.
+<br><br>
+{% if not current_user.member.reddit %}
+    If you have a reddit account, why not <a href="{{ reddit_link }}">link it</a>?
+{% else %}
+    You've linked your reddit account <strong>/u/{{ current_user.member.reddit }}</strong>.
+{% endif %}
+<br><br>
+{% if current_user.member.main %}
+    You've stated that your main character is <strong>{{ current_user.member.main }}</strong>.
+{% endif %}
 </h5>
 {% endif %}
 {% endblock content %}
