--- a/hr/templates/details.html
+++ b/hr/templates/details.html
@@ -5,6 +5,7 @@
 <script>
     $(document).ready(function() {
         $('.modal-trigger').leanModal();
+        $('select').material_select();
     });
 </script>
 {% endblock head %}
@@ -44,25 +45,45 @@
         </tr>
         <tr>
             <td>Membership status</td>
-            <td>{{ member.status }}</td>
+            <td>
+                <form action="{{ url_for('details', id=member.id) }}" method="POST" class="row">
+                    <div class="col s4">
+                        <select name="status">
+                            <option value="{{ member.status }}" active>{{ member.status }}</option>
+                            <option value="New">New</option>
+                            <option value="Ready to be interviewed">Ready to be interviewed</option>
+                            <option value="Ready to be accepted">Ready to be accepted</option>
+                        </select>
+                    </div>
+                    <div class="col s4">
+                        <button class="waves-effect waves-light btn orange" type="submit">Save</button>
+                    </div>
+                    <input type="text" name="section" value="status" hidden>
+                </form>
+            </td>
         </tr>
         <tr>
-            <td>Alts</td>
-            <td>{{ member.alts }}</td>
+            <td>Main</td>
+            <td>
+                {{ member.main }}<br>
+                <a class="waves-effect waves-light btn modal-trigger orange" href="#modalMain">Edit ...</a>
+            </td>
         </tr>
         <tr>
             <td>API key(s)</td>
             <td>
-                <a class="waves-effect waves-light btn modal-trigger orange" href="#modalAPI">Edit</a>
+                <a class="waves-effect waves-light btn modal-trigger orange" href="#modalAPI">Edit ...</a>
             </td>
         </tr>
         <tr>
             <td>Visibility</td>
             <td>
                 {% if not member.hidden %}
-                    Visible (<a href="{{ url_for('visibility', id=member.id, action='hide') }}">hide</a>)
+                    <a class="waves-effect waves-light btn modal-trigger orange"
+                        href="{{ url_for('visibility', id=member.id, action='hide') }}">Hide</a>
                 {% else %}
-                    <span class="red">Hidden</span> (<a href="{{ url_for('visibility', id=member.id, action='show') }}">show</a>)
+                    <a class="waves-effect waves-light btn modal-trigger orange"
+                        href="{{ url_for('visibility', id=member.id, action='show') }}">Show</a>
                 {% endif%}
             </td>
         </tr>
@@ -70,7 +91,7 @@
         <tr>
             <td>Delete</td>
             <td><a class="waves-effect waves-light btn modal-trigger red"
-                href="{{ url_for('delete', id=member.id) }}">Permanently delete user</a></td>
+                href="#modalDelete">Permanently delete user ...</a></td>
         </tr>
         {% endif %}
     </tbody>
@@ -97,6 +118,43 @@
     <div class="modal-footer">
         <a class="modal-action modal-close waves-effect waves-light btn-flat white">Close</a>
         <button class="waves-effect waves-light btn-flat orange" type="submit" form="formKeys">Save</button>
+    </div>
+</div>
+
+<div id="modalMain" class="modal bottom-sheet">
+    <div class="modal-content">
+        <h4>Main</h4>
+        <p>
+            Enter this character's main if it's an alt.
+        </p>
+        <div class="row">
+            <form action="{{ url_for('details', id=member.id) }}" method="POST" class="col s12" id="formMain">
+                <div class="row">
+                    <div class="input-field col s12">
+                        <label for="keys">Main</label>
+                        <input type="text" name="main" value="{{ member.main }}">
+                        <input type="text" name="section" value="main" hidden>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </div>
+    <div class="modal-footer">
+        <a class="modal-action modal-close waves-effect waves-light btn-flat white">Close</a>
+        <button class="waves-effect waves-light btn-flat orange" type="submit" form="formMain">Save</button>
+    </div>
+</div>
+
+<div id="modalDelete" class="modal bottom-sheet">
+    <div class="modal-content">
+        <h4>Delete member</h4>
+        <p>
+            Are you sure that you want to permanently delete this user?
+        </p>
+    </div>
+    <div class="modal-footer">
+        <a class="modal-action modal-close waves-effect waves-light btn-flat white">Close</a>
+        <a class="waves-effect waves-light btn-flat red" href="{{ url_for('delete', id=member.id) }}">Delete</a>
     </div>
 </div>
 {% endblock content %}
